--- a/src/layouts/ActivitiesPost.astro
+++ b/src/layouts/ActivitiesPost.astro
@@ -5,7 +5,8 @@ import type { CollectionEntry } from 'astro:content'
 
 import { Comment } from 'astro-pure/advanced'
 import { TOC } from 'astro-pure/components/pages'
-import { Button, FormattedDate, Icon } from 'astro-pure/user'
+import { Button, Icon } from 'astro-pure/user'
+import FormattedDate from '@/components/custom/FormattedDate.astro'
 import { cn } from 'astro-pure/utils'
 import Copyright from '@/components/custom/Copyright.astro'
 import PageLayout from '@/layouts/ContentLayout.astro'
