--- a/src/pages/terms/list.astro
+++ b/src/pages/terms/list.astro
@@ -21,7 +21,11 @@ const meta = {
       <h2 class='text-xl font-medium'>Site policy documentation</h2>
       <CardList {...terms} />
       <h2 class='text-xl font-medium'>Help Information</h2>
-      <p>You need to add md files in this directory.</p>
+      <p>If you need help, please contact us:</p>
+      <p class='mt-2'>
+        <a href='mailto:andreo_y@sjtu.edu.cn' class='text-blue-600 hover:text-blue-800 underline'>andreo_y@sjtu.edu.cn</a> | 
+        <a href='mailto:2542426789@qq.com' class='text-blue-600 hover:text-blue-800 underline'>2542426789@qq.com</a>
+      </p>
     </div>
   </main>
 </PageLayout>
