--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -153,7 +153,7 @@ const headings = [
       },
       {
         date: '2025-06-21',
-        content: '由ACondawayUNo、Tourist以及VioletEvar联合发布修订版ScaleLab实习生指南，并成立VapourX元老群。'
+        content: '由ACondawayUNo、Tourist以及VioletEvar联合发布修订版ScaleLab实习生指南。'
       },
       {
         date: '2025-05-01',
