--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -29,9 +29,7 @@ const headings = [
     我们正在做的！
   </h2>
   <p>
-    VapourX 正在汇聚一群对具身智能充满热情的爱好者、专业人士和研究人员，致力于推动人类、数字人和机器人之间的自然交互，促使具身智能从研究走向现实，在产业与创新中实现无缝演进与深远影响。
-    </br>
-    <Spoiler>恭喜你发现了一个没有内容的彩蛋！</Spoiler>
+    VapourX 正在汇聚一群对具身智能充满热情的爱好者、专业人士和研究人员，致力于推动人类、数字人和机器人之间的自然交互，促使具身智能从研究走向现实，在产业与创新中实现无缝演进，逐步实现具身智能走入千家万户。这是一个不断上升、不断扩充的社区，Vapour代表不断蒸腾的力量，X代表无限的链接和未知的探索。
   </p>
 
   <h2 id='logo-meaning'>
@@ -51,6 +49,12 @@ const headings = [
   <p>
     总的来说，只要你对具身智能有热情，想要为社区做出各种意义的贡献，欢迎你加入VapourX的大家庭！
   </p>
+  <p>
+    如果你想要加入VapourX，请通过以下方式联系我们：
+  </p>
+  <ul>
+    <li>邮箱：<a href='mailto:vapourx-open-forum@outlook.com'>vapourx-open-forum@outlook.com</a></li>
+  </ul>
 
   {/* team members */}
   <h2 id='team'>核心团队</h2>
@@ -95,7 +99,7 @@ const headings = [
         organization: 'SJTU ScaleLab',
         role: '社区创始人',
         slogan: '人机合一，化具象为抽象。',
-        href: 'https://acondaway.github.io/'
+        href: '/peoples/acondaway'
       },
       {
         name: 'Andreo（杨锦畅）',
@@ -103,7 +107,7 @@ const headings = [
         organization: 'SJTU',
         role: '社区网页设计师',
         slogan: '我是关羽',
-        href: 'https://github.com/hzyangjc'
+        href: '/peoples/andreo'
       },
       {
         name: 'Violet（刘伊天）',
@@ -111,7 +115,7 @@ const headings = [
         organization: 'SJTU ScaleLab',
         role: '社区运营团队负责人',
         slogan: '我也是个人',
-        href: 'https://github.com/VioletEvar'
+        href: '/peoples/violet'
       },
       {
         name: 'HuaiNan（帅哲）',
@@ -119,27 +123,11 @@ const headings = [
         organization: 'SJTU DS',
         role: '社区视觉传达总设计师',
         slogan: '我也是个人',
-        href: 'https://github.com/HuaiNanPror'
+        href: '/peoples/huainan'
       }
     ]}
   />
 
-
-  {/* social-networks */}
-  <h2 id='social-networks'>Social Networks</h2>
-  <p>等待补充...</p>
-  <Substats
-    stats={[
-      {
-        platform: '小红书',
-        icon: 'github',
-        color: '#FF2442',
-        link: 'https://www.xiaohongshu.com/user/profile/645fc2f60000000029014a80?xsec_token=YBr2weXWhfZAtQcADkrSlIJmDeqFb7bxaG7NdJJ9JgJwU=&xsec_source=app_share&xhsshare=CopyLink&appuid=645fc2f60000000029014a80&apptime=1754334164&share_id=12d2a08d949c44ebb2219b31e5f94728',
-        text: 'followers',
-        api: 'xiaohongshu/645fc2f60000000029014a80'
-      }
-    ]}
-  />
 
   {/* about-blog */}
   <h2 id='about-blog'>大事记</h2>
