--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,11 +205,9 @@ const recentActivities = allActivities.slice(0, 3)
       </Section> */}
 
       <Section title='About'>
-        <p class='text-muted-foreground'>Developer / Designer</p>
+        <p class='text-muted-foreground'>What is VapourX</p>
         <p class='text-muted-foreground'>
-          Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione
-          indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel,
-          at eum oratio possit voluptatum.
+          VapourX 正在汇聚一群对具身智能充满热情的爱好者、专业人士和研究人员，致力于推动人类、数字人和机器人之间的自然交互，促使具身智能从研究走向现实，在产业与创新中实现无缝演进，逐步实现具身智能走入千家万户。这是一个不断上升、不断扩充的社区，Vapour代表不断蒸腾的力量，X代表无限的链接和未知的探索。
         </p>
         <Button title='More about us' class='w-fit self-end' href='/about' style='ahead' />
       </Section>
