--- a/src/pages/peoples/andreo.astro
+++ b/src/pages/peoples/andreo.astro
@@ -14,7 +14,7 @@ const person = {
   organization: 'SJTU',
   role: '社区网页设计师',
   slogan: '我是关羽',
-  tags: ['前端开发', 'UI/UX设计', 'Web技术', '用户体验', '响应式设计'],
+      tags: ['前端开发', 'UI-UX设计', 'Web技术', '用户体验', '响应式设计'],
   description: '专注于前端开发和用户体验设计，致力于创造美观且实用的Web界面。擅长将复杂的设计需求转化为优雅的用户界面，注重用户体验的每一个细节。',
   github: 'https://github.com/hzyangjc',
   website: 'https://andreo.dev',
