--- a/src/pages/peoples/index.astro
+++ b/src/pages/peoples/index.astro
@@ -29,7 +29,7 @@ const members = [
     role: '社区网页设计师',
     slogan: '我是关羽',
     href: '/peoples/andreo',
-    tags: ['前端开发', 'UI/UX设计', 'Web技术', '用户体验'],
+    tags: ['前端开发', 'UI-UX设计', 'Web技术', '用户体验'],
     description: '专注于前端开发和用户体验设计，致力于创造美观且实用的Web界面。'
   },
   {
