--- a/src/components/custom/Hero.astro
+++ b/src/components/custom/Hero.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets'
 import type { InferEntrySchema } from 'astro:content'
 
-import { PageInfo } from 'astro-pure/components/pages'
+import PageInfo from './PageInfo.astro'
 import { Icon } from 'astro-pure/user'
 import FormattedDate from './FormattedDate.astro'
 
