--- a/src/components/custom/Footer.astro
+++ b/src/components/custom/Footer.astro
@@ -60,7 +60,7 @@ const footerLink1 = footerConf.links?.filter(({ pos }) => pos === 1) || []
           }
           {/* Busuanzi site statistics */}
           <span class='ml-2'>
-            • Total visits <span id="busuanzi_container_site_pv">
+            • Total visits <span id="busuanzi_container_site_pv" style="display: inline !important;">
               <span id="busuanzi_value_site_pv"></span>
             </span>
           </span>
