--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -106,7 +106,7 @@ const headings = [
         avatar: 'https://avatars.githubusercontent.com/u/33977087?v=4',
         organization: 'SJTU',
         role: '社区网页设计师',
-        slogan: '我是关羽',
+        slogan: '我不是关羽',
         href: '/peoples/andreo'
       },
       {
@@ -151,7 +151,6 @@ const headings = [
   />
   <h2>致谢</h2>
   <ul>
-    <li>Domain: <a href='#' target='_blank'>Vercel</a></li>
     <li>
       Framework & Theme: <a href='https://astro.build/' target='_blank'>Astro</a> + <a
         href='https://github.com/cworld1/astro-theme-pure'
@@ -159,15 +158,12 @@ const headings = [
       >
     </li>
     <li>
-      Site hosting: <a href='https://vercel.com/' target='_blank'>Vercel</a>
-    </li>
-    <li>
-      CI/CD: <a href='https://vercel.com/workflow' target='_blank'>Vercel Workflow</a>
+      Site hosting: <a href='https://netlify.com/' target='_blank'>Netlify</a>
     </li>
     <!-- <li>Resources speedup: <a href='https://cdn.cbd.int/' target='_blank'>CBD CDN</a></li> -->
     <li>Comment system: <a href='https://waline.js.org' target='_blank'>Waline</a></li>
     <li>
-      Visits: <a href='https://supabase.com/' target='_blank'>Supabase</a> +
+      Visits: <a href='https://leancloud.app/' target='_blank'>LeanCloud</a> +
       <a href='https://waline.js.org/' target='_blank'>Waline</a>
     </li>
     <li>
